# pyftir

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: 01_black_body_radiator.py  pyftir.mplstyle
requirements/: dev.txt  fast.txt
src/pyftir/: AUTHORS.txt  __init__.py
src/pyftir/_utils/: __init__.py  _numba_helpers.py  _validate.py  types.py
src/pyftir/augment/extrapolate/: _extrapolate.py  _numba_base.py  _numpy_base.py
src/pyftir/spectra_simulate/: __init__.py  _validated_conversion.py  atmospheric.py  black_body.py
src/pyftir/test_data/: __init__.py  black_body.py
src/pyscopee/: AUTHORS.txt  VERSION.txt  __init__.py
src/pyscopee/_utils/: __init__.py  _validate.py  types.py
src/pyscopee/augment/: __init__.py
src/pyscopee/augment/extrapolate/: __init__.py  _extrapolate.py  _numpy_base.py
src/pyscopee/spectra_simulate/: atmospheric.py
tests/: conftest.py
tests/test_augment/: test_arburg.py
tests/test_utils/: test_validate.py
